add subarticular columns. closes #31

--- a/index.html
+++ b/index.html
@@ -101,7 +101,9 @@
 							<col style="width:70px; border-left-style:solid" />
 							<col style="width:70px; border-left-style:double" />
 							<col style="width:70px" />
+							<col style="width:70px" />
 							<col style="width:90px; border-style:none" />
+							<col style="width:70px" />
 							<col style="width:70px" />
 							<col style="width:70px; border-right-style:double" />
 							<col style="width:70px; border-right-style:solid" />
@@ -118,9 +120,11 @@
 								<td class="mark dark trash hover" title="Broad-based disc bulge"><a>Broad-based<br />disc bulge</a></td>
 								<td class="mark dark trash" title="Right neuroforaminal narrowing"><a>Right NF<br />narrowing</a></td>
 								<td class="mark dark trash hover" title="Right foraminal disc protrusion"><a>Right<br />foraminal</a></td>
+								<td class="mark dark trash hover" title="Right subarticular disc protrusion"><a>Right<br />subarticular</a></td>
 								<td class="mark dark trash hover" title="Right central disc protrusion"><a>Right<br />central</a></td>
 								<td class="mark dark trash hover" title="Central disc protrusion"><a>Central</a></td>
 								<td class="mark dark trash hover" title="Left central disc protrusion"><a>Left<br />central</a></td>
+								<td class="mark dark trash hover" title="Left subarticular disc protrusion"><a>Left<br />subarticular</a></td>
 								<td class="mark dark trash hover" title="Left foraminal disc protrusion"><a>Left<br />foraminal</a></td>
 								<td class="mark dark trash" title="Left neuroforaminal narrowing"><a>Left NF<br />narrowing</a></td>
 								<td class="mark dark trash" title="Spinal canal stenosis"><a>Spinal<br />stenosis</a></td>
@@ -130,7 +134,7 @@
 							<tr>
 								<td class="mark dark trash">L1-L2</td>
 								<td id="b1"></td>
-								<td id="r10"></td>
+								<td id="n11"></td>
 								<td id="r11"></td>
 								<td id="r12"></td>
 								<td id="r13"></td>
@@ -138,6 +142,8 @@
 								<td id="r15"></td>
 								<td id="r16"></td>
 								<td id="r17"></td>
+								<td id="n12"></td>
+								<td id="s1"></td>
 								<td id="r18" style="text-align:left" class="dark trash">
 									<select multiple="multiple" id="o1">
 										<optgroup label="Annular fissure">
@@ -192,7 +198,7 @@
 							<tr>
 								<td class="mark dark trash">L2-L3</td>
 								<td id="b2"></td>
-								<td id="r20"></td>
+								<td id="n21"></td>
 								<td id="r21"></td>
 								<td id="r22"></td>
 								<td id="r23"></td>
@@ -200,6 +206,8 @@
 								<td id="r25"></td>
 								<td id="r26"></td>
 								<td id="r27"></td>
+								<td id="n22"></td>
+								<td id="s2"></td>
 								<td id="r28" style="text-align:left" class="dark trash">
 									<select multiple="multiple" id="o2">
 										<optgroup label="Annular fissure">
@@ -254,7 +262,7 @@
 							<tr>
 								<td class="mark dark trash">L3-L4</td>
 								<td id="b3"></td>
-								<td id="r30"></td>
+								<td id="n31"></td>
 								<td id="r31"></td>
 								<td id="r32"></td>
 								<td id="r33"></td>
@@ -262,6 +270,8 @@
 								<td id="r35"></td>
 								<td id="r36"></td>
 								<td id="r37"></td>
+								<td id="n32"></td>
+								<td id="s3"></td>
 								<td id="r38" style="text-align:left" class="dark trash">
 									<select multiple="multiple" id="o3">
 										<optgroup label="Annular fissure">
@@ -316,7 +326,7 @@
 							<tr>
 								<td class="mark dark trash">L4-L5</td>
 								<td id="b4"></td>
-								<td id="r40"></td>
+								<td id="n41"></td>
 								<td id="r41"></td>
 								<td id="r42"></td>
 								<td id="r43"></td>
@@ -324,6 +334,8 @@
 								<td id="r45"></td>
 								<td id="r46"></td>
 								<td id="r47"></td>
+								<td id="n42"></td>
+								<td id="s4"></td>
 								<td id="r48" style="text-align:left" class="dark trash">
 									<select multiple="multiple" id="o4">
 										<optgroup label="Annular fissure">
@@ -378,7 +390,7 @@
 							<tr>
 								<td class="mark dark trash">L5-S1</td>
 								<td id="b5"></td>
-								<td id="r50"></td>
+								<td id="n51"></td>
 								<td id="r51"></td>
 								<td id="r52"></td>
 								<td id="r53"></td>
@@ -386,6 +398,8 @@
 								<td id="r55"></td>
 								<td id="r56"></td>
 								<td id="r57"></td>
+								<td id="n52"></td>
+								<td id="s5"></td>
 								<td id="r58" style="text-align:left" class="dark trash">
 									<select multiple="multiple" id="o5">
 										<optgroup label="Annular fissure">
@@ -439,7 +453,7 @@
 
 							<tr>
 								<td colspan="3" class="mark blank trash"></td>
-								<td colspan="5" class="mark dark trash" style="font-variant:small-caps; font-size:medium">location of disc protrusion</td>
+								<td colspan="7" class="mark dark trash" style="font-variant:small-caps; font-size:medium">location of disc protrusion</td>
 								<td colspan="3" class="mark blank trash"></td>
 							</tr>
 						</tbody>
