show images on hover. closes #3 and closes #4.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 		<script>window.jQuery || document.write('<script src="js/jquery-1.11.1.min.js"><\/script>')</script>
 
-
 		<!-- Multiple Select (JQuery): http://wenzhixin.net.cn/p/multiple-select/docs/ -->
 		<link rel="stylesheet" href="css/multiple-select.css" type="text/css" media="screen"/>
 		<script type="text/javascript" src="js/jquery.multiple.select.js"></script>
@@ -116,13 +115,13 @@
 									<!-- if checked, clone severity to central/paracentral  -->
 									<label style="font-variant:small-caps; font-size:medium"><input id="entirelevel" type="checkbox" />link</label>
 								</td>
-								<td class="mark dark trash" title="Broad-based disc bulge"><a>Broad-based<br />disc bulge</a></td>
+								<td class="mark dark trash hover" title="Broad-based disc bulge"><a>Broad-based<br />disc bulge</a></td>
 								<td class="mark dark trash" title="Right neuroforaminal narrowing"><a>Right NF<br />narrowing</a></td>
-								<td class="mark dark trash" title="Right foraminal disc protrusion"><a>Right<br />foraminal</a></td>
-								<td class="mark dark trash" title="Right central disc protrusion"><a>Right<br />central</a></td>
-								<td class="mark dark trash" title="Central disc protrusion"><a>Central</a></td>
-								<td class="mark dark trash" title="Left central disc protrusion"><a>Left<br />central</a></td>
-								<td class="mark dark trash" title="Left foraminal disc protrusion"><a>Left<br />foraminal</a></td>
+								<td class="mark dark trash hover" title="Right foraminal disc protrusion"><a>Right<br />foraminal</a></td>
+								<td class="mark dark trash hover" title="Right central disc protrusion"><a>Right<br />central</a></td>
+								<td class="mark dark trash hover" title="Central disc protrusion"><a>Central</a></td>
+								<td class="mark dark trash hover" title="Left central disc protrusion"><a>Left<br />central</a></td>
+								<td class="mark dark trash hover" title="Left foraminal disc protrusion"><a>Left<br />foraminal</a></td>
 								<td class="mark dark trash" title="Left neuroforaminal narrowing"><a>Left NF<br />narrowing</a></td>
 								<td class="mark dark trash" title="Spinal canal stenosis"><a>Spinal<br />stenosis</a></td>
 								<td class="mark dark trash" title="Other findings"><a>Other<br />findings</a></td>
