rework -listhesis bidirectional slider

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 											<div id="ddLft1_handle" class="handle red-bar" style="width:40px">None</div>
 										</div>
 										<hr>
-										Listhesis
+										-listhesis
 										<div id="ddL1" class="dragdealer">
 											<div id="ddL1_handle" class="handle red-bar" style="width:40px">None</div>
 										</div>
@@ -240,7 +240,7 @@
 											<div id="ddLft2_handle" class="handle red-bar" style="width:40px">None</div>
 										</div>
 										<hr>
-										Listhesis
+										-listhesis
 										<div id="ddL2" class="dragdealer">
 											<div id="ddL2_handle" class="handle red-bar" style="width:40px">None</div>
 										</div>
@@ -297,7 +297,7 @@
 											<div id="ddLft3_handle" class="handle red-bar" style="width:40px">None</div>
 										</div>
 										<hr>
-										Listhesis
+										-listhesis
 										<div id="ddL3" class="dragdealer">
 											<div id="ddL3_handle" class="handle red-bar" style="width:40px">None</div>
 										</div>
@@ -354,7 +354,7 @@
 											<div id="ddLft4_handle" class="handle red-bar" style="width:40px">None</div>
 										</div>
 										<hr>
-										Listhesis
+										-listhesis
 										<div id="ddL4" class="dragdealer">
 											<div id="ddL4_handle" class="handle red-bar" style="width:40px">None</div>
 										</div>
@@ -411,7 +411,7 @@
 											<div id="ddLft5_handle" class="handle red-bar" style="width:40px">None</div>
 										</div>
 										<hr>
-										Listhesis
+										-listhesis
 										<div id="ddL5" class="dragdealer">
 											<div id="ddL5_handle" class="handle red-bar" style="width:40px">None</div>
 										</div>
