--- a/index.html
+++ b/index.html
@@ -41,15 +41,15 @@
 <body>
 
 	<!-- HEADER -->
-	<div style="float:right; font-size:small; text-align:right">
+	<div class="header-right">
 		<b>Nomenclature Guidelines:</b>
 		<a href="http://www.asnr.org/spine_nomenclature/" target="_blank">2001 <img src="img/open_in_new_window.png" height="12" width="12" alt="2001 Combined Task Force Nomenclature Guidelines" /></a> / <a href="http://www.sciencedirect.com/science/article/pii/S1529943014004094" target="_blank">2014 <img src="img/open_in_new_window.png" height="12" width="12" alt="2014 Combined Task Force Nomenclature Guidelines" /></a>
 			<br />
-		<a href="instructions.html" class="cb" style="font-variant:small-caps; font-size:medium; color:blue">instructions</a>
+		<a href="instructions.html" class="cb">instructions</a>
 			<br />
-		<a href="quickref.html" class="cb" style="font-variant:small-caps; font-size:medium; color:blue">quick reference</a>
+		<a href="quickref.html" class="cb">quick reference</a>
 	</div>
-	<div style="background-color:#eee; padding:20px; text-align:center; font-size:20px; font-weight:bold">
+	<div class="header-title">
 		Lumbar Spondylosis
 	</div>
 	<!-- /HEADER -->
@@ -69,7 +69,7 @@
 					<tbody>
 						<tr><td class="single">
 							<div id="bl" class="drag clone bl">
-								<input type="text" value="Minimal" style="width:60px; vertical-align:bottom; text-align:center" id="bl_text" class="bl_text_class" />
+								<input type="text" value="Minimal" style="width:60px; text-align:center" id="bl_text" class="bl_text_class" />
 							</div>
 						</td></tr>
 						<tr><td class="single">
@@ -94,7 +94,7 @@
 			<!-- right container -->
 			<!-- http://stackoverflow.com/questions/4457506/css-how-to-set-the-table-column-width-constant-regardless-of-the-amount-of-text -->
 			<div id="right">
-				<table id="table2" style="table-layout:fixed; width:870px"><!-- RIGHT TABLE -->
+				<table id="table2"><!-- RIGHT TABLE -->
 					<colgroup>
 						<col style="width:40px" />
 						<col style="width:80px" />
@@ -144,44 +144,44 @@
 							<td id="r17"></td>
 							<td id="n12"></td>
 							<td id="s1"></td>
-							<td id="r18" style="text-align:center; color:white; background-color:#7f8c8d; padding:0px; border:0px" class="dark trash">
-								<a class="inline" href="#inline_content1" id="of1"><div style="line-height:32px">L1 - L2</div></a>
+							<td id="r18" class="dark trash other">
+								<a class="inline" href="#inline_content1" id="of1"><div>L1 - L2</div></a>
 								<div style='display:none'>
 									<div id='inline_content1' style='padding:10px; background:#fff; width:250px'>
 										<h3 style="margin:5px; text-align:center">L1 - L2</h3>
 										Annular fissure
 										<div id="ddAf1" class="dragdealer">
-											<div id="ddAf1_handle" class="handle red-bar" style="width:40px">None</div>
+											<div id="ddAf1_handle" class="handle red-bar">None</div>
 										</div>
 										<hr>
 										Disc desiccation
 										<div id="ddDd1" class="dragdealer">
-											<div id="ddDd1_handle" class="handle red-bar" style="width:40px">None</div>
+											<div id="ddDd1_handle" class="handle red-bar">None</div>
 										</div>
 										<hr>
 										End-plate degenerative changes
 										<div id="ddEp1" class="dragdealer">
-											<div id="ddEp1_handle" class="handle red-bar" style="width:40px">None</div>
+											<div id="ddEp1_handle" class="handle red-bar">None</div>
 										</div>
 										<hr>
 										Facet joint hypertrophy, Right
 										<div id="ddFjhR1" class="dragdealer">
-											<div id="ddFjhR1_handle" class="handle red-bar" style="width:40px">None</div>
+											<div id="ddFjhR1_handle" class="handle red-bar">None</div>
 										</div>
 										<hr>
 										Facet joint hypertrophy, Left
 										<div id="ddFjhL1" class="dragdealer">
-											<div id="ddFjhL1_handle" class="handle red-bar" style="width:40px">None</div>
+											<div id="ddFjhL1_handle" class="handle red-bar">None</div>
 										</div>
 										<hr>
 										Ligamentum flavum thickening
 										<div id="ddLft1" class="dragdealer">
-											<div id="ddLft1_handle" class="handle red-bar" style="width:40px">None</div>
+											<div id="ddLft1_handle" class="handle red-bar">None</div>
 										</div>
 										<hr>
 										Spondylolisthesis
 										<div id="ddL1" class="dragdealer">
-											<div id="ddL1_handle" class="handle red-bar" style="width:40px">None</div>
+											<div id="ddL1_handle" class="handle red-bar">None</div>
 										</div>
 									</div>
 								</div>
@@ -201,44 +201,44 @@
 							<td id="r27"></td>
 							<td id="n22"></td>
 							<td id="s2"></td>
-							<td id="r28" style="text-align:center; color:white; background-color:#7f8c8d" class="dark trash">
-								<a class="inline" href="#inline_content2" id="of2"><div style="line-height:32px">L2 - L3</div></a>
+							<td id="r28" class="dark trash other">
+								<a class="inline" href="#inline_content2" id="of2"><div>L2 - L3</div></a>
 								<div style='display:none'>
 									<div id='inline_content2' style='padding:10px; background:#fff; width:250px'>
 										<h3 style="margin:5px; text-align:center">L2 - L3</h3>
 										Annular fissure
 										<div id="ddAf2" class="dragdealer">
-											<div id="ddAf2_handle" class="handle red-bar" style="width:40px">None</div>
+											<div id="ddAf2_handle" class="handle red-bar">None</div>
 										</div>
 										<hr>
 										Disc desiccation
 										<div id="ddDd2" class="dragdealer">
-											<div id="ddDd2_handle" class="handle red-bar" style="width:40px">None</div>
+											<div id="ddDd2_handle" class="handle red-bar">None</div>
 										</div>
 										<hr>
 										End-plate degenerative changes
 										<div id="ddEp2" class="dragdealer">
-											<div id="ddEp2_handle" class="handle red-bar" style="width:40px">None</div>
+											<div id="ddEp2_handle" class="handle red-bar">None</div>
 										</div>
 										<hr>
 										Facet joint hypertrophy, Right
 										<div id="ddFjhR2" class="dragdealer">
-											<div id="ddFjhR2_handle" class="handle red-bar" style="width:40px">None</div>
+											<div id="ddFjhR2_handle" class="handle red-bar">None</div>
 										</div>
 										<hr>
 										Facet joint hypertrophy, Left
 										<div id="ddFjhL2" class="dragdealer">
-											<div id="ddFjhL2_handle" class="handle red-bar" style="width:40px">None</div>
+											<div id="ddFjhL2_handle" class="handle red-bar">None</div>
 										</div>
 										<hr>
 										Ligamentum flavum thickening
 										<div id="ddLft2" class="dragdealer">
-											<div id="ddLft2_handle" class="handle red-bar" style="width:40px">None</div>
+											<div id="ddLft2_handle" class="handle red-bar">None</div>
 										</div>
 										<hr>
 										Spondylolisthesis
 										<div id="ddL2" class="dragdealer">
-											<div id="ddL2_handle" class="handle red-bar" style="width:40px">None</div>
+											<div id="ddL2_handle" class="handle red-bar">None</div>
 										</div>
 									</div>
 								</div>
@@ -258,44 +258,44 @@
 							<td id="r37"></td>
 							<td id="n32"></td>
 							<td id="s3"></td>
-							<td id="r38" style="text-align:center; color:white; background-color:#7f8c8d" class="dark trash">
-								<a class="inline" href="#inline_content3" id="of3"><div style="line-height:32px">L3 - L4</div></a>
+							<td id="r38" class="dark trash other">
+								<a class="inline" href="#inline_content3" id="of3"><div>L3 - L4</div></a>
 								<div style='display:none'>
 									<div id='inline_content3' style='padding:10px; background:#fff; width:250px'>
 										<h3 style="margin:5px; text-align:center">L3 - L4</h3>
 										Annular fissure
 										<div id="ddAf3" class="dragdealer">
-											<div id="ddAf3_handle" class="handle red-bar" style="width:40px">None</div>
+											<div id="ddAf3_handle" class="handle red-bar">None</div>
 										</div>
 										<hr>
 										Disc desiccation
 										<div id="ddDd3" class="dragdealer">
-											<div id="ddDd3_handle" class="handle red-bar" style="width:40px">None</div>
+											<div id="ddDd3_handle" class="handle red-bar">None</div>
 										</div>
 										<hr>
 										End-plate degenerative changes
 										<div id="ddEp3" class="dragdealer">
-											<div id="ddEp3_handle" class="handle red-bar" style="width:40px">None</div>
+											<div id="ddEp3_handle" class="handle red-bar">None</div>
 										</div>
 										<hr>
 										Facet joint hypertrophy, Right
 										<div id="ddFjhR3" class="dragdealer">
-											<div id="ddFjhR3_handle" class="handle red-bar" style="width:40px">None</div>
+											<div id="ddFjhR3_handle" class="handle red-bar">None</div>
 										</div>
 										<hr>
 										Facet joint hypertrophy, Left
 										<div id="ddFjhL3" class="dragdealer">
-											<div id="ddFjhL3_handle" class="handle red-bar" style="width:40px">None</div>
+											<div id="ddFjhL3_handle" class="handle red-bar">None</div>
 										</div>
 										<hr>
 										Ligamentum flavum thickening
 										<div id="ddLft3" class="dragdealer">
-											<div id="ddLft3_handle" class="handle red-bar" style="width:40px">None</div>
+											<div id="ddLft3_handle" class="handle red-bar">None</div>
 										</div>
 										<hr>
 										Spondylolisthesis
 										<div id="ddL3" class="dragdealer">
-											<div id="ddL3_handle" class="handle red-bar" style="width:40px">None</div>
+											<div id="ddL3_handle" class="handle red-bar">None</div>
 										</div>
 									</div>
 								</div>
@@ -315,44 +315,44 @@
 							<td id="r47"></td>
 							<td id="n42"></td>
 							<td id="s4"></td>
-							<td id="r48" style="text-align:center; color:white; background-color:#7f8c8d" class="dark trash">
-								<a class="inline" href="#inline_content4" id="of4"><div style="line-height:32px">L4 - L5</div></a>
+							<td id="r48" class="dark trash other">
+								<a class="inline" href="#inline_content4" id="of4"><div>L4 - L5</div></a>
 								<div style='display:none'>
 									<div id='inline_content4' style='padding:10px; background:#fff; width:250px'>
 										<h3 style="margin:5px; text-align:center">L4 - L5</h3>
 										Annular fissure
 										<div id="ddAf4" class="dragdealer">
-											<div id="ddAf4_handle" class="handle red-bar" style="width:40px">None</div>
+											<div id="ddAf4_handle" class="handle red-bar">None</div>
 										</div>
 										<hr>
 										Disc desiccation
 										<div id="ddDd4" class="dragdealer">
-											<div id="ddDd4_handle" class="handle red-bar" style="width:40px">None</div>
+											<div id="ddDd4_handle" class="handle red-bar">None</div>
 										</div>
 										<hr>
 										End-plate degenerative changes
 										<div id="ddEp4" class="dragdealer">
-											<div id="ddEp4_handle" class="handle red-bar" style="width:40px">None</div>
+											<div id="ddEp4_handle" class="handle red-bar">None</div>
 										</div>
 										<hr>
 										Facet joint hypertrophy, Right
 										<div id="ddFjhR4" class="dragdealer">
-											<div id="ddFjhR4_handle" class="handle red-bar" style="width:40px">None</div>
+											<div id="ddFjhR4_handle" class="handle red-bar">None</div>
 										</div>
 										<hr>
 										Facet joint hypertrophy, Left
 										<div id="ddFjhL4" class="dragdealer">
-											<div id="ddFjhL4_handle" class="handle red-bar" style="width:40px">None</div>
+											<div id="ddFjhL4_handle" class="handle red-bar">None</div>
 										</div>
 										<hr>
 										Ligamentum flavum thickening
 										<div id="ddLft4" class="dragdealer">
-											<div id="ddLft4_handle" class="handle red-bar" style="width:40px">None</div>
+											<div id="ddLft4_handle" class="handle red-bar">None</div>
 										</div>
 										<hr>
 										Spondylolisthesis
 										<div id="ddL4" class="dragdealer">
-											<div id="ddL4_handle" class="handle red-bar" style="width:40px">None</div>
+											<div id="ddL4_handle" class="handle red-bar">None</div>
 										</div>
 									</div>
 								</div>
@@ -372,44 +372,44 @@
 							<td id="r57"></td>
 							<td id="n52"></td>
 							<td id="s5"></td>
-							<td id="r58" style="text-align:center; color:white; background-color:#7f8c8d" class="dark trash">
-								<a class="inline" href="#inline_content5" id="of5"><div style="line-height:32px">L5 - S1</div></a>
+							<td id="r58" class="dark trash other">
+								<a class="inline" href="#inline_content5" id="of5"><div>L5 - S1</div></a>
 								<div style='display:none'>
 									<div id='inline_content5' style='padding:10px; background:#fff; width:250px'>
 										<h3 style="margin:5px; text-align:center">L5 - S1</h3>
 										Annular fissure
 										<div id="ddAf5" class="dragdealer">
-											<div id="ddAf5_handle" class="handle red-bar" style="width:40px">None</div>
+											<div id="ddAf5_handle" class="handle red-bar">None</div>
 										</div>
 										<hr>
 										Disc desiccation
 										<div id="ddDd5" class="dragdealer">
-											<div id="ddDd5_handle" class="handle red-bar" style="width:40px">None</div>
+											<div id="ddDd5_handle" class="handle red-bar">None</div>
 										</div>
 										<hr>
 										End-plate degenerative changes
 										<div id="ddEp5" class="dragdealer">
-											<div id="ddEp5_handle" class="handle red-bar" style="width:40px">None</div>
+											<div id="ddEp5_handle" class="handle red-bar">None</div>
 										</div>
 										<hr>
 										Facet joint hypertrophy, Right
 										<div id="ddFjhR5" class="dragdealer">
-											<div id="ddFjhR5_handle" class="handle red-bar" style="width:40px">None</div>
+											<div id="ddFjhR5_handle" class="handle red-bar">None</div>
 										</div>
 										<hr>
 										Facet joint hypertrophy, Left
 										<div id="ddFjhL5" class="dragdealer">
-											<div id="ddFjhL5_handle" class="handle red-bar" style="width:40px">None</div>
+											<div id="ddFjhL5_handle" class="handle red-bar">None</div>
 										</div>
 										<hr>
 										Ligamentum flavum thickening
 										<div id="ddLft5" class="dragdealer">
-											<div id="ddLft5_handle" class="handle red-bar" style="width:40px">None</div>
+											<div id="ddLft5_handle" class="handle red-bar">None</div>
 										</div>
 										<hr>
 										Spondylolisthesis
 										<div id="ddL5" class="dragdealer">
-											<div id="ddL5_handle" class="handle red-bar" style="width:40px">None</div>
+											<div id="ddL5_handle" class="handle red-bar">None</div>
 										</div>
 									</div>
 								</div>
@@ -434,9 +434,9 @@
 	<!-- /MAIN CONTAINER -->
 
 	<!-- PREVIEW PANE -->
-	<div id="preview" style="margin-top:15px; clear:both">
+	<div id="preview">
 		<!-- REPORT AREA -->
-		<div class="editable" id="report_textarea" contenteditable="true" style="padding-top:5px; float:left">
+		<div class="editable" id="report_textarea" contenteditable="true">
 			An error has occurred.
 		</div>
 
@@ -445,12 +445,12 @@
 			<table>
 				<tr>
 					<td>
-						<button style="width:150px; height:50px" id="selectAllbtn" type="button">
+						<button id="selectAllbtn">
 						Select All
 						</button>
 					</td>
 					<td>
-						<button id="resetbtn" style="height:50px">
+						<button id="resetbtn">
 						Reset
 						</button>
 					</td>
@@ -469,7 +469,7 @@
 	<!-- /PREVIEW PANE -->
 
 	<!-- FOOTER -->
-	<div style="clear:both; padding-left:15px; font-size:x-small; padding-top:20px">
+	<div class="footer">
 		Patrick Do | 2014
 	</div>
 	<!-- /FOOTER -->
